<resources>
    <string name="app_name">SEIG学生信息管理系统</string>
    <string name="login">登陆</string>
    <string name="reset">重置</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="welcome">SEIG学生信息系统</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败</string>
    <string name="reset_success">重置成功</string>
    <string name="reset_fail">重置失败</string>
    <string name="account_error">账号错误</string>
    <string name="password_error">密码错误</string>
    <string name="account_password_error">账号或密码错误</string>
    <string name="account_password_empty">账号或密码为空</string>
    <string name="account_password_empty_error">账号或密码为空</string>
    <string name="Logout">退出登录</string>
    <string name="tv_course_name">课程名称：</string>
    <string name="tv_teacher_name">授课教师：</string>
    <string name="tv_course_place">上课地点：</string>
    <string name="tv_course_day">上课时间：</string>
    <string name="tv_course_time">上课星期：</string>
    <string name="profile_student_id">学号</string>
    <string name="profile_name">姓名</string>
    <string name="profile_gender">性别</string>
    <string name="profile_start_year">年级</string>
    <string name="profile_years">学制</string>
    <string name="profile_teacher_name">导师</string>
    <string name="profile_birthday">生日</string>
    <string name="seig_logo">SEIG_LOGO</string>
    <string name="course1">课程名称：</string>
    <string name="course2">任 课 教 师：</string>
    <string name="course3">课 程 学 分：</string>
    <string name="course4">课 程 学 时：</string>
    <string name="course5">上 课 周 数：</string>
    <string name="course6">课 程 类 型：</string>
    <string name="course7">你的分数:</string>
    <string name="admin1">账号ID:</string>
    <string name="admin2">账号名:</string>
    <string name="admin3">性别:</string>
    <string name="admin4">生日:</string>
    <string name="admin5">入职时间:</string>
    <string-array name="identity_array">
        <item>学生</item>
<!--        <item>老师</item>-->
        <item>管理员</item>
    </string-array>
</resources>