<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context=".Student.CourseDetailActivity"
              android:id="@+id/bgLayout"
              android:background="@drawable/animation_list"
        >
    <!--course_detail.xml-->
    <!-- 标题栏 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="课程成绩"
        android:textSize="40sp"
        android:paddingLeft="25dp"/>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/tv_course_name"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/tv_course_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:textStyle="bold" />
    </TableRow>

    <!-- 课程信息区域 -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course1"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center" />
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course2"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center" />
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course4"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center" />
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course5"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                />
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course6"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course7"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_student_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"/>
    </TableRow>

    <!-- 同班同学列表 -->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="同班同学"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:layout_marginBottom="8dp"/>-->

    <!--    <ListView-->
    <!--        android:id="@+id/rv_classmates"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical">-->
    <!--    </ListView>-->

</LinearLayout>