<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:paddingVertical="80dp"
        android:paddingHorizontal="32dp"
        android:id="@+id/bgLayout"
        android:background="@drawable/animation_list"
        android:orientation="vertical"
        >

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/school_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            />

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />

    <LinearLayout
            android:id="@+id/identityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:src="@mipmap/account_logo"
                />

        <EditText
                android:id="@+id/LoginAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:autofillHints=""
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:src="@mipmap/password_logo"
                />

        <EditText
                android:id="@+id/LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:autofillHints=""
                android:drawableEnd="@drawable/invisible"
                />
    </LinearLayout>

    <Spinner
            android:id="@+id/identitySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:entries="@array/identity_array"
            android:minHeight="48dp"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

        <Button
                android:id="@+id/LoginButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                />

    </LinearLayout>

</LinearLayout>