<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context=".Student.AddCourseDetailActivity"
              android:id="@+id/bgLayout"
              android:background="@drawable/animation_list">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="90dp"
            android:text="学生选课"
            android:textSize="40sp"
            android:paddingLeft="25dp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@color/translucent_white">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course1"
                    android:textSize="23sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tv_course_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
        </TableRow>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#000000" />


        <!-- 课程信息区域 -->
        <TableRow
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course2"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"/>
        </TableRow>

        <TableRow
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course3"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"/>
        </TableRow>

        <TableRow
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course4"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"/>
        </TableRow>

        <TableRow
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course5"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"/>
        </TableRow>

        <TableRow
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course6"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"/>
        </TableRow>

        <Button
                android:id="@+id/btn_add_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="确认选课"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"/>

    </LinearLayout>


    <!-- 同班同学列表 -->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="同班同学"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:layout_marginBottom="8dp"/>-->

    <!--    <ListView-->
    <!--        android:id="@+id/rv_classmates"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical">-->
    <!--    </ListView>-->

</LinearLayout>