<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context=".Admin.CourseDetailActivity"
              android:id="@+id/bgLayout"
              android:background="@drawable/animation_list"
        >
    <!--course_detail.xml-->
    <!-- 标题栏 -->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="80dp"
            android:text="修改成绩"
            android:textStyle="bold"
            android:textSize="30sp"
            android:paddingLeft="25dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/translucent_white">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/tv_course_name"
                    android:textSize="23sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tv_course_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
        </TableRow>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#000000"/>

        <!-- 课程信息区域 -->
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="课   程   I D："
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_course_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course2"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course3"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course4"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course5"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course6"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
        </TableRow>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#000000"/>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="20dp"
                    android:text="学  生  ID："
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/tv_student_id"
                    android:layout_marginStart="60dp"
                    android:textSize="20sp"
                    android:paddingStart="25dp"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:text="学生姓名："
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_student_name"
                    android:layout_marginStart="60dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingLeft="25dp"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="分        数："
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            <EditText
                    android:id="@+id/tv_student_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingHorizontal="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:hint="0: 未出成绩  0~60: 不及格"
                    android:textAlignment="center"/>
        </TableRow>
    </LinearLayout>

    <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="更改"
            android:layout_gravity="center"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@color/translucent_white"
            android:textStyle="bold"/>

    <!-- 同班同学列表 -->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="同班同学"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:layout_marginBottom="8dp"/>-->

    <!--    <ListView-->
    <!--        android:id="@+id/rv_classmates"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical">-->
    <!--    </ListView>-->

</LinearLayout>